# learn

./: .gitignore  README.md
dlang/smol_db/: .gitignore  dub.json
dlang/smol_db/source/: app.d  data.d
languages/c/test/: fib.c
languages/clojure/hello/: CHANGELOG.md  README.md  project.clj
languages/clojure/smol_db/: .gitignore  CHANGELOG.md  README.md  project.clj
languages/cpp/apps/conan_cmake_boost/: CMakeLists.txt  Makefile  boost_serialization.cpp  conanfile.txt
languages/cpp/apps/conan_cmake_poco/: Makefile  conanfile.txt
languages/cpp/apps/conan_cmake_test/: CMakeLists.txt  conanfile.txt
languages/cpp/apps/cpp_smol_db/: .gitignore  Makefile
languages/cpp/apps/fib_test/: fib.cxx
languages/cpp/apps/playground/: play.cxx
languages/cpp/apps/string_shuffler/: CMakeLists.txt  Makefile  planning.txt
languages/cpp/apps/string_shuffler/src/lib/: dummy_lib_class.hpp  icli_argument_validator.hpp  irng.hpp  ishuffler.hpp  shuffler_cli_argument_validator.hpp  standard_lib_rng.hpp  std_random_shuffler.hpp
languages/cpp/apps/string_shuffler/src/shuffler/: main.cpp
languages/cpp/apps/sumnsums/: sumnsum.cpp
languages/cpp/apps/test_memory_access/: main.cxx
languages/cpp/apps/todo-demo/: Makefile
languages/cpp/apps/todo-demo/src/cli/: CMakeLists.txt  main.cxx
languages/cpp/apps/two_hour_demo/: commandline.cxx  commandline.hxx  main.cxx  two_hour_demo.sln  two_hour_demo.vcxproj
languages/cpp/core/cmake_basic/: CMakeLists.txt
languages/cpp/core/cmake_basic/include/: inc.h
languages/cpp/core/cmake_basic/src/: inc.cpp  main.cpp
languages/cpp/core/effmodcpp/: CMakeLists.txt  Makefile
languages/cpp/core/playground/: async.cpp  dyn.cpp  lmb.cpp  main.cpp  measure.cpp  placement.cpp  test.cpp  test2.cpp  test3.cpp  testuptr.cpp  unique.cpp  weak.cpp
languages/cpp/core/virt/: virt.cxx
languages/csharp/: .gitignore
languages/csharp/SmolDB/: Database.cs  Options.cs  Program.cs  SmolDB.csproj  SmolDB.sln
languages/fsharp/SmolDB/: CommandLine.fs  Database.fs  Program.fs  SmolDB.fsproj  SmolDB.sln
languages/fsharp/fib_test/: Program.fs  fib_test.sln
languages/python/fib_test/: fib.py
languages/python/smol_db/: db.py  dependencies.txt
languages/rust/apps/word_randomizer/fuzzer/: Cargo.toml
languages/rust/apps/word_randomizer/fuzzer/src/: main.rs
(+122 files in other folders)
