[package]
name = "fuzzer"
version = "0.1.0"
authors = ["Oleksii-Kshenskyi <oleksii.kshenskyi@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
rand = "0.7"
itertools = "0.9.0"
unicode-segmentation = "1.6.0"